--- a/README.html
+++ b/README.html
@@ -45,6 +45,8 @@
 		--color-light: <span style="background-color: var(--color-light);">  </span>;
 		--color-orange-transparent: <span style="background-color: #F58420dd;">  </span>;
 		--color-dark-transparent: <span style="background-color: #000c;">  </span>;
+		--color-purple: #6E0472;
+		--color-purple-transparent: <span style="background-color: #6E0472dd;">  </span>;
 	</pre><hr>
 	<h2>Tipos de fuentes</h2>
 	<h3 class="font-ubuntu">.font-ubuntu</h3>
@@ -139,6 +141,40 @@
 		<div class="boton-style-3d color-background-yellow">Lorem.</div>
 		<div class="boton-style-3d color-background-dark">Lorem.</div>
 	</div>
-
+	<hr>
+	<h2>.menu-cuadric-resize</h2>
+	<ul class="menu-cuadric-resize">
+		<li>
+			<a href="#">Elemento 1</a>
+		</li>
+		<li>
+			<a href="#">Elemento 2</a>
+		</li>
+		<li>
+			<a href="#">Elemento 3</a>
+		</li>
+		<li>
+			<a href="#">Elemento 4</a>
+		</li>
+		<li>
+			<a href="#">Elemento 5</a>
+		</li>
+		<li>
+			<a href="#">Elemento 6</a>
+		</li>
+	</ul>
+	<pre>
+		< ul class="menu-style-simple">
+			< li>
+				< a href="#">Elemento 1< /a>
+			< /li>
+			< li>
+				< a href="#">Elemento 2< /a>
+			< /li>
+			< li>
+				< a href="#">Elemento 3< /a>
+			< /li>
+		< /ul>
+	</pre>
 </body>
 </html>
